first test of uthread

--- a/Ex2/CMakeLists.txt
+++ b/Ex2/CMakeLists.txt
@@ -3,5 +3,9 @@ project(Ex2)
 
 set(MAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES uthreads.h uthreads.cpp thread.cpp thread.h)
+set(SOURCE_FILES uthreads.h uthreads.cpp thread.cpp thread.h )
+
+set(ITIMER_FILES demo_itimer.c )
+add_executable(itimer ${ITIMER_FILES})
+
 add_executable(Ex2 ${SOURCE_FILES})
