still not working

--- a/Ex2/CMakeLists.txt
+++ b/Ex2/CMakeLists.txt
@@ -9,3 +9,6 @@ set(ITIMER_FILES demo_itimer.c )
 add_executable(itimer ${ITIMER_FILES})
 
 add_executable(Ex2 ${SOURCE_FILES})
+
+set(JMP_FILES demo_jmp.c )
+add_executable(jmp ${JMP_FILES})
