finish README  and submission tar

--- a/Ex2/Makefile
+++ b/Ex2/Makefile
@@ -1,7 +1,7 @@
 CC=g++
 RANLIB=ranlib
 
-LIBSRC= uthreads.cpp thread.cpp
+LIBSRC= uthreads.cpp Thread.cpp
 LIBOBJ=$(LIBSRC:.cpp=.o)
 
 INCS=-I.
@@ -13,27 +13,27 @@ TARGETS = libuthreads.a
 TAR=tar
 TARFLAGS=-cvf
 TARNAME=ex2.tar
-TARSRCS = $(LIBSRC) thread.h Makefile README
+TARSRCS = $(LIBSRC) Thread.h Makefile README
 
 all: uthreads
 
 test.o: uthreads.h
 	$(CC) $(CFLAGS)  test.cpp -o test.o
 
-thread.o: thread.cpp thread.h
-	$(CC) $(CFLAGS) thread.cpp -o thread.o
+Thread.o: Thread.cpp Thread.h
+	$(CC) $(CFLAGS) Thread.cpp -o Thread.o
 
 uthreads.o: uthreads.cpp uthreads.h
 	$(CC) $(CFLAGS) uthreads.cpp -o uthreads.o
 
-main: uthreads.o thread.o test.o
-	$(CC) -o main uthreads.o thread.o test.o
+main: uthreads.o Thread.o test.o
+	$(CC) -o main uthreads.o Thread.o test.o
 
-uthreads: uthreads.o thread.o
-	ar rcs libuthreads.a uthreads.o thread.o
+uthreads: uthreads.o Thread.o
+	ar rcs libuthreads.a uthreads.o Thread.o
 
 clean:
-	$(RM) $(TARGETS) $(LIBOBJ) $(TARNAME) *~ *core
+	$(RM) $(TARGETS) $(LIBOBJ) $(TARNAME)
 
 
 tar:
