--- a/Ex3/CMakeLists.txt
+++ b/Ex3/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Ex3)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp MapReduceFramework.cpp MapReduceFramework.h MapReduceClient.h)
+set(SOURCE_FILES main.cpp MapReduceFramework.cpp MapReduceFramework.h MapReduceClient.h ThreadToContainer.cpp ThreadToContainer.h)
 add_executable(Ex3 ${SOURCE_FILES})
 
 set(SOURCE_FILES1 Search.cpp MapReduceFramework.cpp MapReduceFramework.h MapReduceClient.h )
