need to finish writing log life

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.6)
-project(Ex2)
+project(Ex3)
 
-set(MAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -Wall -Wextra")
 
-set(SOURCE_FILES Ex2/uthreads.h Ex2/uthreads.cpp Ex2/Thread.h Ex2/Thread.cpp Ex2/test1430.cpp)
+set(SOURCE_FILES Ex3/main.cpp Ex3/MapReduceFramework.cpp Ex3/MapReduceFramework.h Ex3/MapReduceClient.h Ex3/ThreadToContainer.cpp Ex3/ThreadToContainer.h)
+add_executable(Ex3 ${SOURCE_FILES})
 
-add_executable(Ex2 ${SOURCE_FILES})
+set(SOURCE_FILES1 Ex3/Search.cpp Ex3/MapReduceFramework.cpp Ex3/MapReduceFramework.h Ex3/MapReduceClient.h Ex3/ThreadToContainer.cpp Ex3/ThreadToContainer.h)
+add_executable(Search ${SOURCE_FILES1})
