--- a/Ex3/CMakeLists.txt
+++ b/Ex3/CMakeLists.txt
@@ -8,3 +8,7 @@ add_executable(Ex3 ${SOURCE_FILES})
 
 set(SOURCE_FILES1 Search.cpp MapReduceFramework.cpp MapReduceFramework.h MapReduceClient.h ThreadToContainer.cpp ThreadToContainer.h)
 add_executable(Search ${SOURCE_FILES1})
+
+set(SOURCE_FILES2 test.cpp MapReduceFramework.cpp MapReduceFramework.h MapReduceClient.h ThreadToContainer.cpp ThreadToContainer.h)
+add_executable(test1 ${SOURCE_FILES2})
+
