need to fix fbr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,8 @@ add_executable(Ex4 ${SOURCE_FILES})
 
 set(SOURCE_FILES1 Ex4/main.cpp)
 add_executable(main ${SOURCE_FILES1})
+
+set(SOURCE_FILES2 Ex4/TEST.cpp Ex4/CacheFS.h Ex4/CacheFS.cpp Ex4/CacheAlg.cpp Ex4/CacheAlg.h Ex4/Lru.cpp Ex4/Lru.h Ex4/Lfu.cpp
+        Ex4/Lfu.h Ex4/Fbr.cpp Ex4/Fbr.h)
+
+add_executable(test5 ${SOURCE_FILES2})
