finished make file and start commenting

--- a/Ex4/CMakeLists.txt
+++ b/Ex4/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Ex4)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES Test1.cpp CacheFS.h CacheAlg.cpp CacheAlg.h Lru.cpp Lru.h Lfu.cpp Lfu.h Fbr.cpp Fbr.h CacheFS.cpp Test1.cpp)
+set(SOURCE_FILES TEST.cpp CacheFS.h CacheAlg.cpp CacheAlg.h Lru.cpp Lru.h Lfu.cpp Lfu.h Fbr.cpp Fbr.h CacheFS.cpp )
 add_executable(Ex4 ${SOURCE_FILES})
 
 set(SOURCE_FILES1 main.cpp)
