--- a/Ex4/makefile
+++ b/Ex4/makefile
@@ -8,14 +8,14 @@ INCS=-I.
 CFLAGS = -Wall -Wextra -g -c -std=c++11
 LOADLIBES = -L./
 
-TARGETS = *.o CacheFS.a test1 test
+TARGETS = *.o CacheFS.a
 
 TAR=tar
 TARFLAGS=-cvf
 TARNAME=ex4.tar
-TARSRCS = CacheFS.cpp CacheAlg.cpp CacheAlg.h Lfu.cpp Lfu.h Lru.cpp Lru.h Fbr.cpp Fbr.h README Makefile
+TARSRCS = CacheFS.cpp CacheAlg.cpp CacheAlg.h Lfu.cpp Lfu.h Lru.cpp Lru.h Fbr.cpp Fbr.h README makefile Answers.pdf
 
-all: CacheFS test
+all: CacheFS
 
 CacheAlg.o: CacheAlg.cpp CacheAlg.h
 	$(CC) $(CFLAGS)  CacheAlg.cpp -o CacheAlg.o
@@ -32,17 +32,9 @@ Lru.o: Lru.cpp Lru.h CacheAlg.h
 Fbr.o: Fbr.cpp Fbr.h CacheAlg.h
 	$(CC) $(CFLAGS) Fbr.cpp -o Fbr.o
 
-TEST.o: TEST.cpp CacheFS.h
-	$(CC) $(CFLAGS) TEST.cpp -o TEST.o
-
-test: TEST.o CacheFS
-	$(CC)  -o test TEST.o CacheFS.a
-
 CacheFS: CacheFS.o CacheAlg.o Lfu.o Lru.o Fbr.o
 	ar rcs CacheFS.a CacheFS.o CacheAlg.o Lfu.o Lru.o Fbr.o
 
-test1: Lfu.o TEST.o CacheFS
-	$(CC) -o test1 TEST.o CacheFS.a
 
 clean:
 	$(RM) $(TARGETS) $(TARNAME)
