--- a/Ex5/CMakeLists.txt
+++ b/Ex5/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Ex5)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp Client.cpp Client.h Server.cpp Server.h)
+set(SOURCE_FILES main.cpp Client.cpp Client.h Server.cpp)
 add_executable(Ex5 ${SOURCE_FILES})
