continue working on the client conecting from the client side not working

--- a/Ex5/CMakeLists.txt
+++ b/Ex5/CMakeLists.txt
@@ -3,5 +3,11 @@ project(Ex5)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp Client.cpp Client.h Server.cpp)
-add_executable(Ex5 ${SOURCE_FILES})
+set(SOURCE_FILES main.cpp utilities.cpp )
+add_executable(main ${SOURCE_FILES})
+
+set(SOURCE_FILES1 Server.cpp utilities.cpp )
+add_executable(server ${SOURCE_FILES1})
+
+set(SOURCE_FILES2 Client.cpp utilities.cpp)
+add_executable(client ${SOURCE_FILES2})
